[package]
name = "brrr"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
panic = "abort"
debug = true

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_Security"] }
